# CharacterAnimationOpenGL

./: .clean.sh  .gitignore  .scriptMakeBuildHandmade.sh  CMakeLists.txt  README.md  master_CharAnim.cbp  master_CharAnim.lua  master_CharAnim.make
src/master_CharAnim/: CharAnimViewer.cpp  CharAnimViewer.h  CharacterController.cpp  CharacterController.h  CubeController.cpp  CubeController.h  MotionGraph.cpp  MotionGraph.h  Skeleton.cpp  Skeleton.h  Viewer.cpp
src/master_CharAnim/Animations/: AnimState.h  Idle.cpp  Idle.h  Kick.cpp  Kick.h  NonStopAnim.cpp  Run.cpp  Run.h  Smoke.cpp  Walk.cpp  Walk.h
tutos/: pipeline3d.cpp
